--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Tag selector to select the 'body' element */
 body {
   /* Your code here! */
+  background: #00b3eb;
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
